 =======================================================================
 ==CHANGES.txt
 =======================================================================

Current Development

* GORA-417 Deploy Hadoop-1 compatible binaries for Apache Gora (lewismc)

* GORA-432 Simplify if Statements (Furkan KAMACI via lewismc)

* GORA-386 Gora Spark Backend Support (Furkan KAMACI, talat, lewismc)

* GORA-429 Implement Maven forbidden-apis plugin in Gora (lewismc, rmarroquin)

* GORA-228 java.util.ConcurrentModificationException when using MemStore for concurrent tests (Yasin Kılınç, cihad güzel, lewismc)

* GORA-419: AccumuloStore.put deletes entire row when updating map/array field (gerhardgossen via lewismc)

* GORA-420: AccumuloStore.createSchema fails when table already exists (gerhardgossen via lewismc)

* GORA-427 Configure MongoDB ReadPreference and WriteConcern (drazzib)

* GORA-426 MongoDB cursor timeout on long running parse job (Alexander Yastrebov via drazzib)

* GORA-424 Cache cursor size to improve performance (Alexander Yastrebov via drazzib)

* GORA-423 BSONDecorator returns empty string for null field value (Alexander Yastrebov via drazzib)

* GORA-262 Add support for HTTPClient authentication in gora-solr (Furkan KAMACI via lewismc)

* GORA-384 Provide documentation on Gora Shims layer (lewismc)

* GORA-415 hadoop-client dependency should be optional in gora-core (hsaputra via lewismc)

* GORA-410 Change logging behavior to pass exception object to LOG methods (Gerhard Gossen via lewismc)

* GORA-330 Import Gora Gradle plugin (drazzib)


Apache Gora 0.6 Release - 12/02/2015 (dd/mm/yyyy)
Release Report - http://s.apache.org/gora-0.6

* GORA-406 Upgrade Solr dependencies to 4.10.3 (lewismc)

* GORA-407 Upgrade restlet dependencies to 2.3.1 for gora-solr (lewismc)

* GORA-388 MongoStore: Fix handling of Utf8 in filters (drazzib)

* GORA-375 Upgrade HBase to 0.98 (Talat UYARER via lewismc)
